# navtechradar

./: .gitignore  LICENSE.txt  README.md  bootstrap.sh
cpp/: CMakeLists.txt  cndpconfigurationmessage.h  cndpfftdatamessage.h  cndpnetworkdatamessage.h  radarclient.cpp  radarclient.h  tcpradarclient.cpp  testclient_main.cpp
csharp/: .gitignore  TestClient.sln
csharp/IASDK/: IASDK.csproj
csharp/IASDK/Enums/: ConnectionState.cs  TcpNetworkDataMessageType.cs
csharp/IASDK/Events/: ConnectionStateEventArgs.cs  GenericEventArgs.cs
csharp/IASDK/Extensions/: ArrayExtensions.cs  RawStructExtensions.cs
csharp/IASDK/Interfaces/: IRawData.cs  ITcpClientConnection.cs
csharp/IASDK/Networking/: AsyncTcpClient.cs  FftData.cs  NavigationData.cs  RadarTcpClient.cs  RadarTcpClientConnection.cs  TcpClient.cs  TcpClientConnection.cs  TcpConfigurationDataMessage.cs  TcpNavigationDataMessage.cs  TcpNetworkDataMessage.cs  TcpNetworkDataMessages.cs  Utility.cs
csharp/IASDK/Properties/: AssemblyInfo.cs
csharp/TestClient/: Program.cs  TestClient.csproj
csharp/TestClient/Properties/: AssemblyInfo.cs
iasdk/: .gitignore  iasdk.sln  iasdk.vcxproj  iasdk.vcxproj.filters
protobuf/: configurationdata.proto  discovery.proto  health.proto  healthinfo.proto  networkinfo.proto  nvramcontents.proto  radarmodel.proto  softwareversions.proto
ros/: .gitignore  Mobile_Platform.launch  Movement_Detector.launch  README.md  convert.launch  rotating_coordinates.launch  talker1.launch
ros/.catkin_tools/profiles/default/: devel_collisions.txt
ros/src/: CFAR.cpp  CMakeLists.txt  Mobile_Platform.cpp  Movement-Detector.cpp  convert.cpp  package.xml  radar_tf_broadcaster.cpp  radar_tf_publisher.cpp  talker1.cpp
ros/src/cfg/: dynamic_param.cfg
ros/src/cfg/cpp/nav_ross/: dynamic_paramConfig.h
ros/src/docs/: dynamic_paramConfig-usage.dox  dynamic_paramConfig.dox  dynamic_paramConfig.wikidoc
ros/src/msg/: nav_msg.msg
ros/src/rviz/: Default_Mobile_Platform.rviz
ros/src/src/nav_ross/cfg/: dynamic_paramConfig.py
